sintatico.output
State 50 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 $@2: %empty

    3 $@3: %empty

    4 programa: cabecalho $@1 variaveis $@2 rotinas $@3 T_INICIO lista_comandos T_FIM

    5 cabecalho: T_PROGRAMA T_IDENTIF

    6 variaveis: %empty
    7          | declaracao_variaveis

    8 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    9                     | tipo lista_variaveis

   10 tipo: T_LOGICO
   11     | T_INTEIRO

   12 lista_variaveis: lista_variaveis T_IDENTIF
   13                | T_IDENTIF

   14 rotinas: %empty

   15 $@4: %empty

   16 rotinas: $@4 funcoes

   17 funcoes: funcao
   18        | funcao funcoes

   19 $@5: %empty

   20 $@6: %empty

   21 $@7: %empty

   22 funcao: T_FUNC tipo T_IDENTIF $@5 T_ABRE lista_parametros T_FECHA $@6 variaveis $@7 T_INICIO lista_comandos T_FIMFUNC

   23 lista_parametros: %empty
   24                 | parametro lista_parametros

   25 parametro: tipo T_IDENTIF

   26 lista_comandos: %empty
   27               | comando lista_comandos

   28 comando: entrada_saida
   29        | repeticao
   30        | selecao
   31        | atribuicao
   32        | retorno

   33 retorno: T_RETORNE expressao

   34 entrada_saida: leitura
   35              | escrita

   36 leitura: T_LEIA T_IDENTIF

   37 escrita: T_ESCREVA expressao

   38 $@8: %empty

   39 $@9: %empty

   40 repeticao: T_ENQTO $@8 expressao T_FACA $@9 lista_comandos T_FIMENQTO

   41 $@10: %empty

   42 $@11: %empty

   43 selecao: T_SE expressao T_ENTAO $@10 lista_comandos T_SENAO $@11 lista_comandos T_FIMSE

   44 $@12: %empty

   45 atribuicao: T_IDENTIF $@12 T_ATRIBUI expressao

   46 expressao: expressao T_VEZES expressao
   47          | expressao T_DIV expressao
   48          | expressao T_MAIS expressao
   49          | expressao T_MENOS expressao
   50          | expressao T_MAIOR expressao
   51          | expressao T_MENOR expressao
   52          | expressao T_IGUAL expressao
   53          | expressao T_E expressao
   54          | expressao T_OU expressao
   55          | termo

   56 identificador: T_IDENTIF

   57 chamada: %empty

   58 $@13: %empty

   59 chamada: T_ABRE $@13 lista_argumentos T_FECHA

   60 lista_argumentos: %empty

   61 $@14: %empty

   62 lista_argumentos: expressao $@14 lista_argumentos

   63 termo: identificador chamada
   64      | T_NUMERO
   65      | T_V
   66      | T_F
   67      | T_NAO termo
   68      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 5
    T_INICIO (259) 4 22
    T_FIM (260) 4
    T_LEIA (261) 36
    T_ESCREVA (262) 37
    T_SE (263) 43
    T_ENTAO (264) 43
    T_SENAO (265) 43
    T_FIMSE (266) 43
    T_ENQTO (267) 40
    T_FACA (268) 40
    T_FIMENQTO (269) 40
    T_INTEIRO (270) 11
    T_LOGICO (271) 10
    T_MAIS (272) 48
    T_MENOS (273) 49
    T_VEZES (274) 46
    T_DIV (275) 47
    T_MAIOR (276) 50
    T_MENOR (277) 51
    T_IGUAL (278) 52
    T_E (279) 53
    T_OU (280) 54
    T_NAO (281) 67
    T_ATRIBUI (282) 45
    T_ABRE (283) 22 59 68
    T_FECHA (284) 22 59 68
    T_V (285) 65
    T_F (286) 66
    T_IDENTIF (287) 5 12 13 22 25 36 45 56
    T_NUMERO (288) 64
    T_RETORNE (289) 33
    T_FUNC (290) 22
    T_FIMFUNC (291) 22


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    programa (38)
        on left: 4
        on right: 0
    $@1 (39)
        on left: 1
        on right: 4
    $@2 (40)
        on left: 2
        on right: 4
    $@3 (41)
        on left: 3
        on right: 4
    cabecalho (42)
        on left: 5
        on right: 4
    variaveis (43)
        on left: 6 7
        on right: 4 22
    declaracao_variaveis (44)
        on left: 8 9
        on right: 7 8
    tipo (45)
        on left: 10 11
        on right: 8 9 22 25
    lista_variaveis (46)
        on left: 12 13
        on right: 8 9 12
    rotinas (47)
        on left: 14 16
        on right: 4
    $@4 (48)
        on left: 15
        on right: 16
    funcoes (49)
        on left: 17 18
        on right: 16 18
    funcao (50)
        on left: 22
        on right: 17 18
    $@5 (51)
        on left: 19
        on right: 22
    $@6 (52)
        on left: 20
        on right: 22
    $@7 (53)
        on left: 21
        on right: 22
    lista_parametros (54)
        on left: 23 24
        on right: 22 24
    parametro (55)
        on left: 25
        on right: 24
    lista_comandos (56)
        on left: 26 27
        on right: 4 22 27 40 43
    comando (57)
        on left: 28 29 30 31 32
        on right: 27
    retorno (58)
        on left: 33
        on right: 32
    entrada_saida (59)
        on left: 34 35
        on right: 28
    leitura (60)
        on left: 36
        on right: 34
    escrita (61)
        on left: 37
        on right: 35
    repeticao (62)
        on left: 40
        on right: 29
    $@8 (63)
        on left: 38
        on right: 40
    $@9 (64)
        on left: 39
        on right: 40
    selecao (65)
        on left: 43
        on right: 30
    $@10 (66)
        on left: 41
        on right: 43
    $@11 (67)
        on left: 42
        on right: 43
    atribuicao (68)
        on left: 45
        on right: 31
    $@12 (69)
        on left: 44
        on right: 45
    expressao (70)
        on left: 46 47 48 49 50 51 52 53 54 55
        on right: 33 37 40 43 45 46 47 48 49 50 51 52 53 54 62 68
    identificador (71)
        on left: 56
        on right: 63
    chamada (72)
        on left: 57 59
        on right: 63
    $@13 (73)
        on left: 58
        on right: 59
    lista_argumentos (74)
        on left: 60 62
        on right: 59 62
    $@14 (75)
        on left: 61
        on right: 62
    termo (76)
        on left: 63 64 65 66 67 68
        on right: 55 67


State 0

    0 $accept: . programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    5 cabecalho: T_PROGRAMA . T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    4 programa: cabecalho . $@1 variaveis $@2 rotinas $@3 T_INICIO lista_comandos T_FIM

    $default  reduce using rule 1 ($@1)

    $@1  go to state 6


State 4

    5 cabecalho: T_PROGRAMA T_IDENTIF .

    $default  reduce using rule 5 (cabecalho)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    4 programa: cabecalho $@1 . variaveis $@2 rotinas $@3 T_INICIO lista_comandos T_FIM

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    $default  reduce using rule 6 (variaveis)

    variaveis             go to state 9
    declaracao_variaveis  go to state 10
    tipo                  go to state 11


State 7

   11 tipo: T_INTEIRO .

    $default  reduce using rule 11 (tipo)


State 8

   10 tipo: T_LOGICO .

    $default  reduce using rule 10 (tipo)


State 9

    4 programa: cabecalho $@1 variaveis . $@2 rotinas $@3 T_INICIO lista_comandos T_FIM

    $default  reduce using rule 2 ($@2)

    $@2  go to state 12


State 10

    7 variaveis: declaracao_variaveis .

    $default  reduce using rule 7 (variaveis)


State 11

    8 declaracao_variaveis: tipo . lista_variaveis declaracao_variaveis
    9                     | tipo . lista_variaveis

    T_IDENTIF  shift, and go to state 13

    lista_variaveis  go to state 14


State 12

    4 programa: cabecalho $@1 variaveis $@2 . rotinas $@3 T_INICIO lista_comandos T_FIM

    T_FUNC    reduce using rule 15 ($@4)
    $default  reduce using rule 14 (rotinas)

    rotinas  go to state 15
    $@4      go to state 16


State 13

   13 lista_variaveis: T_IDENTIF .

    $default  reduce using rule 13 (lista_variaveis)


State 14

    8 declaracao_variaveis: tipo lista_variaveis . declaracao_variaveis
    9                     | tipo lista_variaveis .
   12 lista_variaveis: lista_variaveis . T_IDENTIF

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8
    T_IDENTIF  shift, and go to state 17

    $default  reduce using rule 9 (declaracao_variaveis)

    declaracao_variaveis  go to state 18
    tipo                  go to state 11


State 15

    4 programa: cabecalho $@1 variaveis $@2 rotinas . $@3 T_INICIO lista_comandos T_FIM

    $default  reduce using rule 3 ($@3)

    $@3  go to state 19


State 16

   16 rotinas: $@4 . funcoes

    T_FUNC  shift, and go to state 20

    funcoes  go to state 21
    funcao   go to state 22


State 17

   12 lista_variaveis: lista_variaveis T_IDENTIF .

    $default  reduce using rule 12 (lista_variaveis)


State 18

    8 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis .

    $default  reduce using rule 8 (declaracao_variaveis)


State 19

    4 programa: cabecalho $@1 variaveis $@2 rotinas $@3 . T_INICIO lista_comandos T_FIM

    T_INICIO  shift, and go to state 23


State 20

   22 funcao: T_FUNC . tipo T_IDENTIF $@5 T_ABRE lista_parametros T_FECHA $@6 variaveis $@7 T_INICIO lista_comandos T_FIMFUNC

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    tipo  go to state 24


State 21

   16 rotinas: $@4 funcoes .

    $default  reduce using rule 16 (rotinas)


State 22

   17 funcoes: funcao .
   18        | funcao . funcoes

    T_FUNC  shift, and go to state 20

    $default  reduce using rule 17 (funcoes)

    funcoes  go to state 25
    funcao   go to state 22


State 23

    4 programa: cabecalho $@1 variaveis $@2 rotinas $@3 T_INICIO . lista_comandos T_FIM

    T_LEIA     shift, and go to state 26
    T_ESCREVA  shift, and go to state 27
    T_SE       shift, and go to state 28
    T_ENQTO    shift, and go to state 29
    T_IDENTIF  shift, and go to state 30
    T_RETORNE  shift, and go to state 31

    $default  reduce using rule 26 (lista_comandos)

    lista_comandos  go to state 32
    comando         go to state 33
    retorno         go to state 34
    entrada_saida   go to state 35
    leitura         go to state 36
    escrita         go to state 37
    repeticao       go to state 38
    selecao         go to state 39
    atribuicao      go to state 40


State 24

   22 funcao: T_FUNC tipo . T_IDENTIF $@5 T_ABRE lista_parametros T_FECHA $@6 variaveis $@7 T_INICIO lista_comandos T_FIMFUNC

    T_IDENTIF  shift, and go to state 41


State 25

   18 funcoes: funcao funcoes .

    $default  reduce using rule 18 (funcoes)


State 26

   36 leitura: T_LEIA . T_IDENTIF

    T_IDENTIF  shift, and go to state 42


State 27

   37 escrita: T_ESCREVA . expressao

    T_NAO      shift, and go to state 43
    T_ABRE     shift, and go to state 44
    T_V        shift, and go to state 45
    T_F        shift, and go to state 46
    T_IDENTIF  shift, and go to state 47
    T_NUMERO   shift, and go to state 48

    expressao      go to state 49
    identificador  go to state 50
    termo          go to state 51


State 28

   43 selecao: T_SE . expressao T_ENTAO $@10 lista_comandos T_SENAO $@11 lista_comandos T_FIMSE

    T_NAO      shift, and go to state 43
    T_ABRE     shift, and go to state 44
    T_V        shift, and go to state 45
    T_F        shift, and go to state 46
    T_IDENTIF  shift, and go to state 47
    T_NUMERO   shift, and go to state 48

    expressao      go to state 52
    identificador  go to state 50
    termo          go to state 51


State 29

   40 repeticao: T_ENQTO . $@8 expressao T_FACA $@9 lista_comandos T_FIMENQTO

    $default  reduce using rule 38 ($@8)

    $@8  go to state 53


State 30

   45 atribuicao: T_IDENTIF . $@12 T_ATRIBUI expressao

    $default  reduce using rule 44 ($@12)

    $@12  go to state 54


State 31

   33 retorno: T_RETORNE . expressao

    T_NAO      shift, and go to state 43
    T_ABRE     shift, and go to state 44
    T_V        shift, and go to state 45
    T_F        shift, and go to state 46
    T_IDENTIF  shift, and go to state 47
    T_NUMERO   shift, and go to state 48

    expressao      go to state 55
    identificador  go to state 50
    termo          go to state 51


State 32

    4 programa: cabecalho $@1 variaveis $@2 rotinas $@3 T_INICIO lista_comandos . T_FIM

    T_FIM  shift, and go to state 56


State 33

   27 lista_comandos: comando . lista_comandos

    T_LEIA     shift, and go to state 26
    T_ESCREVA  shift, and go to state 27
    T_SE       shift, and go to state 28
    T_ENQTO    shift, and go to state 29
    T_IDENTIF  shift, and go to state 30
    T_RETORNE  shift, and go to state 31

    $default  reduce using rule 26 (lista_comandos)

    lista_comandos  go to state 57
    comando         go to state 33
    retorno         go to state 34
    entrada_saida   go to state 35
    leitura         go to state 36
    escrita         go to state 37
    repeticao       go to state 38
    selecao         go to state 39
    atribuicao      go to state 40


State 34

   32 comando: retorno .

    $default  reduce using rule 32 (comando)


State 35

   28 comando: entrada_saida .

    $default  reduce using rule 28 (comando)


State 36

   34 entrada_saida: leitura .

    $default  reduce using rule 34 (entrada_saida)


State 37

   35 entrada_saida: escrita .

    $default  reduce using rule 35 (entrada_saida)


State 38

   29 comando: repeticao .

    $default  reduce using rule 29 (comando)


State 39

   30 comando: selecao .

    $default  reduce using rule 30 (comando)


State 40

   31 comando: atribuicao .

    $default  reduce using rule 31 (comando)


State 41

   22 funcao: T_FUNC tipo T_IDENTIF . $@5 T_ABRE lista_parametros T_FECHA $@6 variaveis $@7 T_INICIO lista_comandos T_FIMFUNC

    $default  reduce using rule 19 ($@5)

    $@5  go to state 58


State 42

   36 leitura: T_LEIA T_IDENTIF .

    $default  reduce using rule 36 (leitura)


State 43

   67 termo: T_NAO . termo

    T_NAO      shift, and go to state 43
    T_ABRE     shift, and go to state 44
    T_V        shift, and go to state 45
    T_F        shift, and go to state 46
    T_IDENTIF  shift, and go to state 47
    T_NUMERO   shift, and go to state 48

    identificador  go to state 50
    termo          go to state 59


State 44

   68 termo: T_ABRE . expressao T_FECHA

    T_NAO      shift, and go to state 43
    T_ABRE     shift, and go to state 44
    T_V        shift, and go to state 45
    T_F        shift, and go to state 46
    T_IDENTIF  shift, and go to state 47
    T_NUMERO   shift, and go to state 48

    expressao      go to state 60
    identificador  go to state 50
    termo          go to state 51


State 45

   65 termo: T_V .

    $default  reduce using rule 65 (termo)


State 46

   66 termo: T_F .

    $default  reduce using rule 66 (termo)


State 47

   56 identificador: T_IDENTIF .

    $default  reduce using rule 56 (identificador)


State 48

   64 termo: T_NUMERO .

    $default  reduce using rule 64 (termo)


State 49

   37 escrita: T_ESCREVA expressao .
   46 expressao: expressao . T_VEZES expressao
   47          | expressao . T_DIV expressao
   48          | expressao . T_MAIS expressao
   49          | expressao . T_MENOS expressao
   50          | expressao . T_MAIOR expressao
   51          | expressao . T_MENOR expressao
   52          | expressao . T_IGUAL expressao
   53          | expressao . T_E expressao
   54          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 61
    T_MENOS  shift, and go to state 62
    T_VEZES  shift, and go to state 63
    T_DIV    shift, and go to state 64
    T_MAIOR  shift, and go to state 65
    T_MENOR  shift, and go to state 66
    T_IGUAL  shift, and go to state 67
    T_E      shift, and go to state 68
    T_OU     shift, and go to state 69

    $default  reduce using rule 37 (escrita)


State 50

   63 termo: identificador . chamada

    T_ABRE  shift, and go to state 70

    T_ABRE    [reduce using rule 57 (chamada)]
    $default  reduce using rule 57 (chamada)

    chamada  go to state 71


State 51

   55 expressao: termo .

    $default  reduce using rule 55 (expressao)


State 52

   43 selecao: T_SE expressao . T_ENTAO $@10 lista_comandos T_SENAO $@11 lista_comandos T_FIMSE
   46 expressao: expressao . T_VEZES expressao
   47          | expressao . T_DIV expressao
   48          | expressao . T_MAIS expressao
   49          | expressao . T_MENOS expressao
   50          | expressao . T_MAIOR expressao
   51          | expressao . T_MENOR expressao
   52          | expressao . T_IGUAL expressao
   53          | expressao . T_E expressao
   54          | expressao . T_OU expressao

    T_ENTAO  shift, and go to state 72
    T_MAIS   shift, and go to state 61
    T_MENOS  shift, and go to state 62
    T_VEZES  shift, and go to state 63
    T_DIV    shift, and go to state 64
    T_MAIOR  shift, and go to state 65
    T_MENOR  shift, and go to state 66
    T_IGUAL  shift, and go to state 67
    T_E      shift, and go to state 68
    T_OU     shift, and go to state 69


State 53

   40 repeticao: T_ENQTO $@8 . expressao T_FACA $@9 lista_comandos T_FIMENQTO

    T_NAO      shift, and go to state 43
    T_ABRE     shift, and go to state 44
    T_V        shift, and go to state 45
    T_F        shift, and go to state 46
    T_IDENTIF  shift, and go to state 47
    T_NUMERO   shift, and go to state 48

    expressao      go to state 73
    identificador  go to state 50
    termo          go to state 51


State 54

   45 atribuicao: T_IDENTIF $@12 . T_ATRIBUI expressao

    T_ATRIBUI  shift, and go to state 74


State 55

   33 retorno: T_RETORNE expressao .
   46 expressao: expressao . T_VEZES expressao
   47          | expressao . T_DIV expressao
   48          | expressao . T_MAIS expressao
   49          | expressao . T_MENOS expressao
   50          | expressao . T_MAIOR expressao
   51          | expressao . T_MENOR expressao
   52          | expressao . T_IGUAL expressao
   53          | expressao . T_E expressao
   54          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 61
    T_MENOS  shift, and go to state 62
    T_VEZES  shift, and go to state 63
    T_DIV    shift, and go to state 64
    T_MAIOR  shift, and go to state 65
    T_MENOR  shift, and go to state 66
    T_IGUAL  shift, and go to state 67
    T_E      shift, and go to state 68
    T_OU     shift, and go to state 69

    $default  reduce using rule 33 (retorno)


State 56

    4 programa: cabecalho $@1 variaveis $@2 rotinas $@3 T_INICIO lista_comandos T_FIM .

    $default  reduce using rule 4 (programa)


State 57

   27 lista_comandos: comando lista_comandos .

    $default  reduce using rule 27 (lista_comandos)


State 58

   22 funcao: T_FUNC tipo T_IDENTIF $@5 . T_ABRE lista_parametros T_FECHA $@6 variaveis $@7 T_INICIO lista_comandos T_FIMFUNC

    T_ABRE  shift, and go to state 75


State 59

   67 termo: T_NAO termo .

    $default  reduce using rule 67 (termo)


State 60
